Fixed about spacing

--- a/style.css
+++ b/style.css
@@ -532,7 +532,7 @@ ABOUT STYLES
 }
 
 .about__container {
-  margin: 7em auto;
+  margin: 4em auto;
 }
 
 .about__container {
